force-app/main/default/objects/Jnobject__c.object
<CustomObject>
    <fields>
        <fullName>Jnfield__c</fullName>
        <label>Jnfield</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>c1__c</fullName>
        <label>Child1</label>
        <referenceTo>Child1__c</referenceTo>
        <relationshipLabel>Jnobjects</relationshipLabel>
        <relationshipName>Jnobjects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2__c</fullName>
        <label>Child2</label>
        <referenceTo>Child2__c</referenceTo>
        <relationshipLabel>Jnobjects</relationshipLabel>
        <relationshipName>Jnobjects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Jnobject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Jnobject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jnobjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>